--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.hotmail.davidjunio.ippo"
         minSdk 21
         targetSdk 31
-        versionCode 10
-        versionName "1.261021"
+        versionCode 11
+        versionName "1.16112021"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
